# mdformat-ruff

./: README.md  pyproject.toml
.github/workflows/: lint.yaml  release.yaml
docs/: release_checklist.md
src/markdown_format_ruff/: __init__.py
