[project]
name = "markdown-format-ruff"
dynamic = ["version"]
description = "Mdformat plugin to run ruff on Python code blocks."
readme = "README.md"
authors = [
  { name = "Bagard Hoel", email = "hoel.bagard.hy@hitachi-hightech.com" },
]
requires-python = ">=3.7"
dependencies = ["ruff"]

[project.entry-points."mdformat.codeformatter"]
"python" = "markdown_format_ruff:format_python"

[tool.uv]
dev-dependencies = [
  "pyright>=1.1.387",
  "ruff>=0.8.4",
  "codespell>=2.3.0; python_version >= '3.8'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_format_ruff"]

[tool.hatch.version]
path = "src/markdown_format_ruff/__init__.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "COM812", # conflict with formatter
  "CPY",    # Copyright rules
  "D1",     # Missing docstring
  "ISC001", # conflict with formatter
  "S",      # Security related stuff.
]

[tool.ruff.lint.isort]
order-by-type = false
known-first-party = ["markdown_format_ruff"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src/markdown_format_ruff"]
pythonVersion = "3.7"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
